--- a/dashboards.html
+++ b/dashboards.html
@@ -59,7 +59,7 @@
       <a href="index.html">Início</a>
       <a href="escalex.html">Escalex</a>
       <a href="dashboards.html">Dashboards</a>
-      <a href="sistema_de_gestao.html">Sistema de Gestão</a>
+      <a href="sistema-de-gestao.html">Sistema de Gestão</a>
     </nav>
   </header>
 
