--- a/sistema-de-gestao.html
+++ b/sistema-de-gestao.html
@@ -30,19 +30,16 @@
     footer{background:var(--azul-escuro); color:#fff; text-align:center; padding:16px; margin-top:36px}
   </style>
 
-  <!-- Guard: exige senha (usa localStorage para persistir entre abas) -->
   <script>
-    (function(){
-      const KEY="dgmcg_aut", PASS="dgmcg@2025";
-      try{
-        const ok = localStorage.getItem(KEY) === PASS;
-        if(!ok){
-          const path = location.pathname.split("/").pop() || "index.html";
-          const qs = location.search ? encodeURIComponent(location.search) : "";
-          location.href = `index.html?next=${path}${qs ? decodeURIComponent(qs) : ""}`;
-        }
-      }catch(e){ location.href = "index.html"; }
-    })();
+    // Solicita senha ao carregar a página
+    document.addEventListener("DOMContentLoaded", function () {
+      const senhaCorreta = "dgmcg@2025";
+      let senha = prompt("Digite a senha para acessar o Portal DGMCG:");
+      if (senha !== senhaCorreta) {
+        alert("Senha incorreta! Acesso negado.");
+        window.location.href = "https://dgmcg.github.io/dgmcg-site/"; // Redireciona caso a senha esteja errada
+      }
+    });
   </script>
 </head>
 <body>
