--- a/index.html
+++ b/index.html
@@ -120,6 +120,30 @@
       <div class="organograma">
         <img src="ORGDGMCG.png" alt="Organograma DGMCG" />
       </div>
+      <div class="organograma">
+  <h2>Organograma DGMCG</h2>
+  <img src="Organograma DGMCG (sem nomes).png" alt="Organograma da DGMCG">
+</div>
+<section style="background-color:#f8f9fc; padding:20px 0;">
+<!-- 👇 INCORPORAÇÃO DO CANVA -->
+<div style="position: relative; width: 100%; height: 0; padding-top: 56.25%;
+ box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy"
+    style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0;"
+    src="https://www.canva.com/design/DAGx-gdPJ6I/Bsbsu-FCKvjs0pOWONFgPA/watch?embed"
+    allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+
+<p style="text-align:center; margin-top:0.5em;">
+  <a href="https://www.canva.com/design/DAGx-gdPJ6I/Bsbsu-FCKvjs0pOWONFgPA/watch?utm_content=DAGx-gdPJ6I&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
+     target="_blank" rel="noopener"
+     style="color:#004080; font-weight:bold; text-decoration:none;">
+     🎥 Ver apresentação completa no Canva
+  </a>
+</p>
+
     </section>
   </main>
 
