--- a/dashboards.html
+++ b/dashboards.html
@@ -80,7 +80,17 @@
       </div>
     </section>
 
-    <!-- TAs Evolução dos Contratos de Gestão -->
+     <!-- Informações das Unidade -->
+    <section id="pane-tas" class="pane" style="display:none">
+      <div class="iframe-wrap">
+        <iframe title="Informações das Unidades" 
+          width="600" height="373.5" 
+          src="https://app.powerbi.com/view?r=eyJrIjoiZmZmNWEyOTAtNWQ5OC00ZjRmLTk2NDMtYTQ5NWY5MmIyYzczIiwidCI6IjQ4YWFmOTY3LTE3MjAtNDY2ZC04M2Y0LTJiOTAxOWRhNTg0ZiJ9" 
+          frameborder="0" allowFullScreen="true"></iframe>
+      </div>
+    </section>
+    
+    <!-- Termos Aditivos Formalizados -->
     <section id="pane-tas" class="pane" style="display:none">
       <div class="iframe-wrap">
         <iframe title="TAs Evolução dos Contratos de Gestão"
@@ -89,7 +99,7 @@
       </div>
     </section>
 
-    <!-- Produção Hospitalar -->
+    <!-- Produção das Unidades -->
     <section id="pane-producao" class="pane" style="display:none">
       <div class="iframe-wrap">
         <iframe title="Produção"
