--- a/dashboards.html
+++ b/dashboards.html
@@ -65,7 +65,7 @@
 
   <main class="container">
     <div class="tabs">
-      <button id="btn-informacoes" onclick="show('Informações das Unidades')">Informações das Unidades</button>
+      <button id="btn-informacoes" onclick="show('informacoes')">Informações das Unidades</button>
       <button id="btn-transparencia" onclick="show('transparencia')">Evolução da Transparência</button>
       <button id="btn-tas" onclick="show('tas')">Termos Aditivos Formalizados</button>
       <button id="btn-producao" onclick="show('producao')">Produção das Unidades</button>
