--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
     }
     .hero h1{font-size:2.2rem; margin:0 0 14px}
     .hero p{font-size:1.1rem; max-width:900px; margin:0 auto}
+
+.botao-simples {
+  display: inline-block;
+  background: #ffffff;
+  color: #004080;
+  font-weight: 600;
+  font-size: 0.95rem;
+  text-decoration: none;
+  padding: 8px 16px;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+  margin-bottom: 12px;
+}
+.botao-simples:hover {
+  background: #cce0ff;
+  color: #002147;
+}
+    
     .container{max-width:1100px; margin:40px auto; padding:0 20px}
     .card{
       background:var(--card);
@@ -87,6 +105,13 @@
   </header>
 
   <section class="hero">
+<!-- Botão singelo para redirecionamento -->
+  <a href="https://gamma.app/docs/New-forTCE-DGMCG-HistoriaProcessos-tarjafr8c00j6ww?mode=present#card-on6v6kgdi1sluq0"
+     target="_blank"
+     class="botao-simples">
+    Apresentação DGMCG
+  </a>
+    
     <h1>Diretoria Geral de Monitoramento dos Contratos de Gestão</h1>
     <p>
       A DGMCG é responsável pelo acompanhamento, fiscalização e monitoramento da execução dos Contratos de Gestão firmados pela
