--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 
   <section class="hero">
 <!-- Botão singelo para redirecionamento -->
-  <a href="https://gamma.app/docs/New-forTCE-DGMCG-HistoriaProcessos-tarjafr8c00j6ww?mode=present#card-on6v6kgdi1sluq0"
+  <a href="https://gamma.app/docs/VF-Indice-Global-de-Qualidade-UPAs-0ykv6titzhqv67r?mode=present#card-1s6rf7wqj86wk3t"
      target="_blank"
      class="botao-simples">
-    Apresentação DGMCG
+    Apresentação IGQ UPAs
   </a>
     
     <h1>Diretoria Geral de Monitoramento dos Contratos de Gestão</h1>
