--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
      class="botao-simples">
     Apresentação IGQ UPAs
   </a>
+    <!-- Botão singelo para redirecionamento -->
+  <a href="https://gamma.app/docs/Diretoria-Geral-de-Monitoramento-dos-Contratos-de-Gestao-oyab577vczsp91z?mode=present#card-dsy4ly1bw26syn8"
+     target="_blank"
+     class="botao-simples">
+    Apresentação DGMCG
+  </a>
     
     <h1>Diretoria Geral de Monitoramento dos Contratos de Gestão</h1>
     <p>
