--- a/escalex.html
+++ b/escalex.html
@@ -36,7 +36,7 @@
     onAuthStateChanged(auth, async (user) => {
       if (!user) {
         alert("Você precisa estar logado para acessar este conteúdo.");
-        window.location.href = "index.html";
+        window.location.href = "login.html";
         return;
       }
 
