--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <img src="DGMCG.png" alt="Logo DGMCG" />
     <nav>
       <a href="index.html">Início</a>
+      <a href="login.html">Área Restrita</a>
       <a href="escalex.html">Escalex</a>
       <a href="dashboards.html">Dashboards</a>
       <a href="sistema-de-gestao.html">Sistema de Gestão</a>
